@@ -1,5 +1,8 @@
 ChangeLog
 ==========
+
+- minor npg_run_merge_generator option handling tweaks
+
 release 3.6
 - LSF resources command modified to prioritise packing jobs on to hosts with the fewest free slots
 - minor changes to support use on gseq cluster.
